输出文件增加选择框

--- a/plugin/src/main/resources/templates/check_resource_conflict_result.html
+++ b/plugin/src/main/resources/templates/check_resource_conflict_result.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div id="app">
-    <h1 style="margin-left: 20px;">资源冲突&nbsp;关系树</h1>
-    <Tree :data="baseData"></Tree>
+    <h1 style="margin-left: 20px;">资源冲突关系树</h1>
+    <Tree :data="baseData" show-checkbox></Tree>
 </div>
 <script>
     new Vue({
